--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
   <ul>
     <li>
+      <a href='demo/checkbox'>checkbox</a>
+      <a href='dist/checkbox.css'>css</a>
+      <a href='src/checkbox.scss'>scss</a>
+    </li>
+    <li>
       <a href='demo/popover'>popover</a>
       <a href='dist/popover.css'>css</a>
       <a href='src/popover.scss'>scss</a>
