--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <a href='src/checkbox.scss'>scss</a>
     </li>
     <li>
+      <a href='demo/radio'>radio</a>
+      <a href='dist/radio.css'>css</a>
+      <a href='src/radio.scss'>scss</a>
+    </li>
+    <li>
       <a href='demo/popover'>popover</a>
       <a href='dist/popover.css'>css</a>
       <a href='src/popover.scss'>scss</a>
