--- a/demo/radio/index.html
+++ b/demo/radio/index.html
@@ -3,25 +3,23 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
-    <link rel='stylesheet' href='../../dist/checkbox.css'>
+    <link rel='stylesheet' href='../../dist/radio.css'>
     <link rel='stylesheet' href='../style.css'>
   </head>
   <body>
     <div id='app' v-cloak>
-      <div>
-        <label>
-          <input type='checkbox' v-model='animated'> animated
-        </label>
-        <label>
-          <input type='checkbox' v-model='inverted'> inverted
-        </label>
-        <select v-model='color'>
-          <option></option>
-          <option>red</option>
-          <option>blue</option>
-          <option>green</option>
-        </select>
-      </div>
+      <label>
+        <input type='checkbox' v-model='animated'> animated
+      </label>
+      <label>
+        <input type='checkbox' v-model='inverted'> inverted
+      </label>
+      <select v-model='color'>
+        <option></option>
+        <option>red</option>
+        <option>blue</option>
+        <option>green</option>
+      </select>
       <table>
         <thead>
           <tr>
@@ -34,52 +32,38 @@
           <tr v-for='i in 30' :style='{fontSize: 7 + i + "px"}'>
             <td style='text-align: right;'>{{7 + i}}</td>
             <td class='text-nowrap'>
-              <input type='checkbox' :class='classList'>
-              <input type='checkbox' :class='classList' checked>
-              <input type='checkbox' :class='classList' indeterminate>
-              <input type='checkbox' :class='classList' disabled>
-              <input type='checkbox' :class='classList' checked disabled>
-              <input type='checkbox' :class='classList' indeterminate disabled>
+              <input type='radio' :class='classList' :name='"radio" + i'>
+              <input type='radio' :class='classList' :name='"radio" + i' checked>
+              <input type='radio' :class='classList' disabled>
+              <input type='radio' :class='classList' checked disabled>
             </td>
             <td class='text-nowrap'>
               <label>
-                <input type='checkbox' :class='classList'>
+                <input type='radio' :class='classList' :name='"radio_label" + i'>
                 unchecked
               </label>
               <label>
-                <input type='checkbox' :class='classList' checked>
+                <input type='radio' :class='classList' :name='"radio_label" + i' checked>
                 checked
               </label>
               <label>
-                <input type='checkbox' :class='classList' indeterminate>
-                indeterminate
+                <input type='radio' :class='classList' disabled>
+                unchecked & disabled
               </label>
               <label>
-                <input type='checkbox' :class='classList' disabled>
-                disabled
-              </label>
-              <label>
-                <input type='checkbox' :class='classList' checked disabled>
+                <input type='radio' :class='classList' checked disabled>
                 checked & disabled
-              </label>
-              <label>
-                <input type='checkbox' :class='classList' indeterminate disabled>
-                indeterminate & disabled
               </label>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
+
     <script src='https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.min.js' integrity='sha256-ngFW3UnAN0Tnm76mDuu7uUtYEcG3G5H1+zioJw3t+68=' crossorigin='anonymous'></script>
     <script>
       new Vue({
         el: '#app',
-        mounted(){
-          this.$el.querySelectorAll('[indeterminate]').forEach((input) => {
-            input.indeterminate = true
-          })
-        },
         data(){
           return {
             animated: false,
