--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       <a href='src/radio.scss'>scss</a>
     </li>
     <li>
+      <a href='demo/tooltip'>tooltip</a>
+      <a href='dist/tooltip.css'>css</a>
+      <a href='src/tooltip.scss'>scss</a>
+    </li>
+    <li>
       <a href='demo/popover'>popover</a>
       <a href='dist/popover.css'>css</a>
       <a href='src/popover.scss'>scss</a>
