Add dark class to popover

--- a/demo/index.html
+++ b/demo/index.html
@@ -40,6 +40,10 @@
           <label for='popover-arrow'>arrow</label>
           <input type='checkbox' v-model='popover.arrow' id='popover-arrow'>
         </div>
+        <div class='knobs-item'>
+          <label for='popover-dark'>dark</label>
+          <input type='checkbox' v-model='popover.dark' id='popover-dark'>
+        </div>
       </div>
     </div>
   </body>
