Add class tooltip-fade

--- a/demo/index.html
+++ b/demo/index.html
@@ -72,6 +72,10 @@
             <option value='bottom-end'>bottom end</option>
           </select>
         </div>
+        <div class='knobs-item'>
+          <label for='tooltip-fade'>fade</label>
+          <input type='checkbox' v-model='tooltip.fade' id='tooltip-fade'>
+        </div>
       </div>
     </div>
   </body>
