Add class tooltip-arrow

--- a/demo/index.html
+++ b/demo/index.html
@@ -73,6 +73,10 @@
           </select>
         </div>
         <div class='knobs-item'>
+          <label for='tooltip-arrow'>arrow</label>
+          <input type='checkbox' v-model='tooltip.arrow' id='tooltip-arrow'>
+        </div>
+        <div class='knobs-item'>
           <label for='tooltip-fade'>fade</label>
           <input type='checkbox' v-model='tooltip.fade' id='tooltip-fade'>
         </div>
