Add class tooltip-delay

--- a/demo/index.html
+++ b/demo/index.html
@@ -80,6 +80,10 @@
           <label for='tooltip-fade'>fade</label>
           <input type='checkbox' v-model='tooltip.fade' id='tooltip-fade'>
         </div>
+        <div class='knobs-item'>
+          <label for='tooltip-delay'>delay</label>
+          <input type='checkbox' v-model='tooltip.delay' id='tooltip-delay'>
+        </div>
       </div>
     </div>
   </body>
