Add class tooltip-dark

--- a/demo/index.html
+++ b/demo/index.html
@@ -77,6 +77,10 @@
           <input type='checkbox' v-model='tooltip.arrow' id='tooltip-arrow'>
         </div>
         <div class='knobs-item'>
+          <label for='tooltip-dark'>dark</label>
+          <input type='checkbox' v-model='tooltip.dark' id='tooltip-dark'>
+        </div>
+        <div class='knobs-item'>
           <label for='tooltip-fade'>fade</label>
           <input type='checkbox' v-model='tooltip.fade' id='tooltip-fade'>
         </div>
