Add html example code to demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-utilities@4.1.3/bootstrap-utilities.min.css'>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/github.min.css'>
     <link rel='stylesheet' href='../../dist/popover.css'>
     <link rel='stylesheet' href='../../dist/tooltip.css'>
+    <link rel='stylesheet' href='style.css'>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.10.3/beautify-html.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.min.js' integrity='sha256-ngFW3UnAN0Tnm76mDuu7uUtYEcG3G5H1+zioJw3t+68=' crossorigin='anonymous'></script>
     <script src='index.js'></script>
   </head>
@@ -46,6 +49,7 @@
           <input type='checkbox' v-model='popover.dark' id='popover-dark'>
         </div>
       </div>
+      <pre><code class='html' ref='popoverCode'></code></pre>
 
       <h2>tooltip</h2>
       <div class='example d-flex justify-content-center'>
@@ -89,6 +93,7 @@
           <input type='checkbox' v-model='tooltip.delay' id='tooltip-delay'>
         </div>
       </div>
+      <pre><code class='html' ref='tooltipCode'></code></pre>
     </div>
   </body>
 </html>
