Add border bottom to h2 tag

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id='app' class='container'>
-      <h2>popover</h2>
+      <h2>Popover</h2>
       <div class='example d-flex justify-content-center'>
         <details :class='popoverClass'>
           <summary class='button'>popover</summary>
@@ -51,7 +51,7 @@
       </div>
       <pre><code class='html' ref='popoverCode'></code></pre>
 
-      <h2>tooltip</h2>
+      <h2>Tooltip</h2>
       <div class='example d-flex justify-content-center'>
         <div :class='tooltipClass'>
           <div class='button'>tooltip</div>
