--- a/demo/index.html
+++ b/demo/index.html
@@ -5,8 +5,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-utilities@4.1.3/bootstrap-utilities.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/github.min.css'>
-    <link rel='stylesheet' href='../../dist/popover.css'>
-    <link rel='stylesheet' href='../../dist/tooltip.css'>
+    <link rel='stylesheet' href='../dist/popover.css'>
+    <link rel='stylesheet' href='../dist/tooltip.css'>
     <link rel='stylesheet' href='style.css'>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.10.3/beautify-html.js'></script>
