Add link to css file

--- a/demo/index.html
+++ b/demo/index.html
@@ -51,6 +51,10 @@
           </div>
         </div>
         <pre><code class='html' ref='code'></code></pre>
+        <div>
+          <a href='../dist/popover.css'>css</a>
+          <a href='../src/popover.scss'>scss</a>
+        </div>
       </div>
 
       <div id='tooltip'>
@@ -97,6 +101,10 @@
           </div>
         </div>
         <pre><code class='html' ref='code'></code></pre>
+        <div>
+          <a href='../dist/tooltip.css'>css</a>
+          <a href='../src/tooltip.scss'>scss</a>
+        </div>
       </div>
     </div>
   </body>
