--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
     <script src='index.js'></script>
   </head>
   <body>
-    <div class='container'>
+    <div class='container mb-5'>
       <div id='popover'>
         <h2>Popover</h2>
         <div class='example d-flex justify-content-center'>
