Add class popover-gap

--- a/demo/index.html
+++ b/demo/index.html
@@ -143,6 +143,10 @@
             <input type='checkbox' v-model='popover.arrow' id='popover-arrow'>
           </div>
           <div class='knobs-item'>
+            <label for='popover-gap'>gap</label>
+            <input type='checkbox' v-model='popover.gap' id='popover-gap'>
+          </div>
+          <div class='knobs-item'>
             <label for='popover-dark'>dark</label>
             <input type='checkbox' v-model='popover.dark' id='popover-dark'>
           </div>
