Add class tooltip-gap

--- a/demo/index.html
+++ b/demo/index.html
@@ -189,6 +189,10 @@
             <input type='checkbox' v-model='tooltip.arrow' id='tooltip-arrow'>
           </div>
           <div class='knobs-item'>
+            <label for='tooltip-gap'>gap</label>
+            <input type='checkbox' v-model='tooltip.gap' id='tooltip-gap'>
+          </div>
+          <div class='knobs-item'>
             <label for='tooltip-dark'>dark</label>
             <input type='checkbox' v-model='tooltip.dark' id='tooltip-dark'>
           </div>
